--- a/css/projects.css
+++ b/css/projects.css
@@ -1,4 +1,4 @@
-/* General Styles */
+/*
 .project-info {
     padding: 1rem;
 }
@@ -59,6 +59,122 @@
     border: 1px solid #ccc;
     border-radius: 15px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+}
+
+.project-cover {
+    width: 175px;
+    height: 175px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin: 0 auto;
+    padding-top: 1.5rem;
+}
+
+
+@media (max-width: 768px) {
+    .project-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .project {
+        flex-basis: 90%;
+        max-width: 90%; 
+        min-width: 270px;
+        margin: 1rem 0;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.08); 
+    }
+
+    .project-cover {
+        width: 125px; 
+        height: 125px;
+        padding-top: 1rem; 
+    }
+
+    .project-name {
+        font-size: 1.4rem; 
+    }
+
+    .projects-title, .projects-description {
+        font-size: 1.4rem; 
+        margin-bottom: 1.2rem; 
+    }
+
+    .music-links a {
+        margin-right: 0.25rem;
+        font-size: 1rem;
+    }
+
+    .project-info {
+        padding: 0.75rem; 
+    }
+}
+
+*/
+
+
+/* General Styles */
+.project-info {
+    padding: 1rem;
+}
+
+.project-name {
+    font-size: 1.5rem;
+    margin: 0.5rem 0;
+}
+
+.project-year {
+    color: #a07855; /* Slightly adjusted to blend better with the gray tones */
+    margin-bottom: 0.5rem;
+}
+
+.music-links a {
+    display: inline-block;
+    margin-right: 0.5rem;
+    text-decoration: none;
+    color: #6e675f; /* Updated to a warm gray */
+    font-weight: bold;
+}
+
+.music-links a:hover,
+.music-links a:focus {
+    color: #504a43; /* Darker gray for hover/focus */
+}
+
+.projects-section {
+    background-color: #ebe8e1; /* Updated to a lighter gray */
+    color: #605e5c; /* Softened charcoal gray for text */
+    padding: 1rem;
+    text-align: center;
+}
+
+.projects-title {
+    font-size: 2.5rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.projects-description {
+    font-size: 1.2rem;
+    margin-bottom: 2rem;
+}
+
+.project-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.project {
+    flex-basis: calc(30% - 1rem);
+    max-width: calc(30% - 1rem);
+    margin: 0.5rem;
+    background: #ffffff; /* Maintained white for clarity */
+    border: 1px solid #ccc; /* Could be updated to a light gray if needed */
+    border-radius: 15px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Soft shadow maintained for depth */
     overflow: hidden;
 }
 
